Fix gallery item sorting issues.
When 4 gallery items existed with 3 columns, moving the 3rd item cause
the second row of items to violently shift position. This commit adds
extra margin to the bottom of the placeholder, which prevents the
position change.

Fixes: #44

--- a/src/inc/builder/sections/css/sections.css
+++ b/src/inc/builder/sections/css/sections.css
@@ -14,6 +14,9 @@
 		margin-bottom: 0; /*reset*/
 	}
 }
+.ttf-one-section .ttf-one-gallery-items-stage .sortable-placeholder {
+	margin-bottom: 38px;
+}
 /*---------------------------------------------------------
  Text and Gallery: One column (html-builder.css)
 -------------------------------------------------------- */
